--- a/app/client/src/styles/global.css
+++ b/app/client/src/styles/global.css
@@ -120,3 +120,18 @@ hr {
 ::selection {
   background: var(--muted);
 }
+#snow {
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  /* background-color: #0f2027; */
+  /* background-image: linear-gradient(to bottom, #0f2027, #080e10); */
+  z-index: 1;
+}
+
+#svelte {
+  z-index: 2;
+}
